ajout images et mentions légales

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/olympia.css">
         <title>Association Olympia</title>
+        <link rel="icon" type="image/png" href="img/logo-favicon.png" />
     </head>
     <body>
         <nav class="navbar navbar-expand-md fixed-top navbar-dark navbar-bg">
@@ -50,7 +51,7 @@
             <div class="header text-primary section">
                 <div class="container-fluid">
                     <div class="container">
-                        <h1 class="display-4">Association Olympia</h1>    
+                        <h1 class="display-4 text-right">Association Olympia</h1>    
                     </div>
                 </div>
             </div>
@@ -90,11 +91,10 @@
                     <div class="d-flex p-5 section-bg">
                         <div class="flex-fill pr-5">
                             <h2>La ludothèque</h2>
-                            <p>Brooklyn glossier enamel pin, cray letterpress ethical vaporware craft beer twee deep v chartreuse fam +1. Sustainable snackwave schlitz, 8-bit venmo meggings literally hot chicken celiac ramps glossier. Beard meggings trust fund, post-ironic edison bulb shoreditch tumeric poke palo santo tumblr poutine seitan pitchfork lo-fi street art. Brooklyn PBR&B palo santo, tumblr ennui neutra flannel tote bag. Vice unicorn keffiyeh beard vexillologist meh fam actually.</p>
-                            <p>Offal paleo yuccie, slow-carb beard dreamcatcher vape cray trust fund sartorial banjo godard portland. Lo-fi franzen art party, palo santo gastropub banjo meditation aesthetic ramps shaman 90's crucifix actually tousled meggings. Yr organic meditation forage, hashtag lyft gochujang. Marfa ugh etsy occupy succulents woke, flexitarian man bun. Woke mumblecore copper mug cray, four dollar toast trust fund marfa ethical. Enamel pin cliche banh mi pinterest. Listicle meditation cloud bread waistcoat.</p>
+                            <p>Notre ludothèque comporte tous types de jeux : jeux d'ambiances, bluff, stratégie, gestion. Elle est enrichie chaque année par des nouveautés choisies par les adhérents. Et chacun est libre d'amener les jeux auxquels il aime jouer !</p>
                         </div>
                         <div class="flex-fill d-none d-sm-block">
-                            <img src="img/logo.jpg" alt="Olympia">
+                            <img src="img/olympia-jeu-dragon_castle.jpg" alt="Olympia">
                         </div>
                     </div>
                 </div>
@@ -118,6 +118,11 @@
                             </p>
                         </div>
                     </div>
+                </div>
+                <div class="row mentions-legales">
+                    <p><b>Mentions légales :</b> Olympia, association loi 1901 - <b>Siège social :</b> 2 rue Jean Monnet, 94130 Nogent sur Marne<br>
+                        <b>Directeur de la publication :</b> Olivier Ferrandez - <b>Email :</b> asso-olympia@gmail.com<br>
+                        <b>Hébergeur :</b> OVH - 2 rue Kellermann - 59100 Roubaix - France</p>
                 </div>
             </div>
             <div class="container-fluid navbar-bg text-white">
