reformatage mentions légales

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                     </div>
                 </div>
                 <div class="row mentions-legales">
-                    <p><b>Mentions légales :</b> Olympia, association loi 1901 - <b>Siège social :</b> 2 rue Jean Monnet, 94130 Nogent sur Marne<br>
-                        <b>Directeur de la publication :</b> Olivier Ferrandez - <b>Email :</b> asso-olympia@gmail.com<br>
+                    <p><b>Mentions légales :</b> Olympia, association loi 1901 - <b>Siège social :</b> 2 rue Jean Monnet, 94130 Nogent sur Marne - 
+                        <b>Directeur de la publication :</b> Olivier Ferrandez - <b>Email :</b> asso-olympia@gmail.com - 
                         <b>Hébergeur :</b> OVH - 2 rue Kellermann - 59100 Roubaix - France</p>
                 </div>
             </div>
