--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
                         <a class="nav-link" href="#ludotheque">Ludothèque</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#rejoindre">Rejoindre l'association</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="#infos">Informations pratiques</a>
                     </li>
                 </div>
             </div>
